syntax = "proto3";

service AdminService {
    rpc Login(LoginRequest) returns (LoginResponse);
}




message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    AdminData adminData = 2;
    string message = 3;
    int32 status = 4;
    string accessToken=5;
    string refreshToken = 6;
    string _id = 7;
}

message AdminData{
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
    string _id = 5;
}